--- a/EventsExpress/appsettings.json
+++ b/EventsExpress/appsettings.json
@@ -25,7 +25,7 @@
     "JwtEmailEncryption": "YOUR JWT EMAIL ENCRYPTION"
   },
   "ConnectionStrings": {
-    "AzureConnection": "Server=tcp:eventsexpressdbserver.database.windows.net,1433;Initial Catalog=EventsExpress_testdb;Persist Security Info=False;User ID=eventsexpressadmin;Password=1qaz1QAZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AzureConnection": "Server=tcp:eventsexpress.database.windows.net,1433;Initial Catalog=EventsExpress;Persist Security Info=False;User ID=katya;Password=Popalava09;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EventsExpress;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Kestrel": {
