--- a/EventsExpress.Core/EventsExpress.Core.csproj
+++ b/EventsExpress.Core/EventsExpress.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0-dev-01119" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.2-dev-00811" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
