--- a/EventsExpress/EventsExpress.csproj
+++ b/EventsExpress/EventsExpress.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\osavchuktc\source\repos\EventsExpress\EventsExpress\EventsExpress.xml</DocumentationFile>
+    <DocumentationFile>D:\home\site\repository\EventsExpress\EventsExpress.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
